############################################
                                SPIDER VERSION 1.4-1
				Released 5 July 2016
				
				
-- External functions imported in NAMESPACE
-- Minor change to nucDiag help file

############################################
                                SPIDER VERSION 1.4-0
				Released 20 June 2016
				
				
-- Bugs in heatmapSpp and plot.ordinDNA fixed
-- New option "names" added for bestCloseMatch and threshID
-- New functions: rnucDiag, blockAlignment, and minInDist

############################################
                                SPIDER VERSION 1.3-0
				Released 25 December 2013
				

-- read.GB: Space removed from around the pipe in the default naming scheme.
-- chaoHaplo: 95% confidence interval calculated around the estimated number of haplotypes.
-- New functions: cgraph, ordinDNA and plot.ordinDNA
-- namespace issues resolved

############################################
                                SPIDER VERSION 1.2-0
				Released 17 November 2012
				

-- Functions added: heatmapSpp
-- read.BOLD: Function completely rewritten to compensate for BOLD deprecating their eFetch system

############################################
                                SPIDER VERSION 1.1-5
				Released 11 October 2012
				

-- monophyly: Code changed from calling the ape C routine "bipartition" directly, to using prop.part()
-- monophylyBoot: Code changed from calling the ape C routine "bipartition" directly, to using prop.part()
-- tree.comp: Code changed from calling the ape C routine "bipartition" directly, to using prop.part()

############################################
                                SPIDER VERSION 1.1-4
				Released 17 June 2012
				

-- sarkar: The addition of a dataset containing the dummy sequences published in Sarkar et al to illustrate the different categories of diagnostic nucleotides.

############################################