@@ -1,4 +1,11 @@
 ############################################
+                                SPIDER VERSION 1.4-2
+				Released 12 March 2017
+				
+				
+-- Extra options added to heatmapSpp. Option of showing the data on the heatmap now available.
+
+############################################
                                 SPIDER VERSION 1.4-1
 				Released 5 July 2016
 				
